fix tab/enter issue on login page

--- a/templates/login.html
+++ b/templates/login.html
@@ -8,24 +8,33 @@
                 <h3 class="text-center">Login</h3>
             </div>
             <div class="card-body">
-                <form method="POST">
+                <form method="POST" id="loginForm">
                     <div class="mb-3">
                         <label for="username" class="form-label">Username</label>
-                        <input type="text" class="form-control" id="username" name="username" required>
+                        <input type="text" class="form-control" id="username" name="username" tabindex="1" required>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" name="password" required>
+                        <input type="password" class="form-control" id="password" name="password" tabindex="2" required>
                     </div>
                     <div class="d-grid">
-                        <button type="submit" class="btn btn-primary">Login</button>
+                        <button type="submit" class="btn btn-primary" tabindex="3">Login</button>
                     </div>
                 </form>
                 <div class="text-center mt-3">
-                    <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a></p>
+                    <p>Don't have an account? <a href="{{ url_for('register') }}" tabindex="4">Register here</a></p>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<script>
+document.getElementById('password').addEventListener('keypress', function(e) {
+    if (e.key === 'Enter') {
+        e.preventDefault();
+        document.getElementById('loginForm').submit();
+    }
+});
+</script>
 {% endblock %} 
