--- a/templates/register.html
+++ b/templates/register.html
@@ -8,24 +8,28 @@
                 <h3 class="text-center">Register</h3>
             </div>
             <div class="card-body">
-                <form method="POST">
+                <form method="POST" id="registerForm">
                     <div class="mb-3">
                         <label for="username" class="form-label">Username</label>
-                        <input type="text" class="form-control" id="username" name="username" required>
+                        <input type="text" class="form-control" id="username" name="username" tabindex="1" required>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" name="password" required>
+                        <input type="password" class="form-control" id="password" name="password" tabindex="2" required>
                     </div>
                     <div class="d-grid">
-                        <button type="submit" class="btn btn-primary">Register</button>
+                        <button type="submit" class="btn btn-primary" tabindex="3">Register</button>
                     </div>
                 </form>
                 <div class="text-center mt-3">
-                    <p>Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
+                    <p>Already have an account? <a href="{{ url_for('login') }}" tabindex="4">Login here</a></p>
                 </div>
             </div>
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block scripts %}
+<script src="{{ url_for('static', filename='js/form-handler.js') }}"></script>
 {% endblock %} 
