Re-organize the javascript to be more idiomatic

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -54,5 +54,5 @@
     {% endif %}
 </div>
 
-<script src="{{ url_for('static', filename='js/cart.js') }}"></script>
+<script src="{{ url_for('static', filename='js/cart-management.js') }}"></script>
 {% endblock %} 
