--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script id="cart-data" type="application/json">{{ g.cart|tojson|safe }}</script>
     <script id="lunch-options-data" type="application/json">{{ g.lunch_options|tojson|safe }}</script>
-    <script src="{{ url_for('serve_js', filename='cart.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/cart-display.js') }}"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html> 
