--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -58,7 +58,7 @@
 </div>
 
 <script src="https://js.stripe.com/v3/"></script>
-<script src="{{ url_for('serve_js', filename='checkout.js') }}"></script>
+<script src="{{ url_for('static', filename='js/checkout-payment.js') }}"></script>
 <script>
     initializeCheckout('{{ stripe_public_key }}', '{{ client_secret }}');
 </script>
